# mcp-bigquery-evals

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
docs/: architecture.md  claude_desktop_setup.md  how_evals_work.md  mcp_client_setup.md
docs/blog/: 2026-05-XX-bigquery-mcp-evals.md  2026-05-XX-no-explain-query.md
docs/superpowers/plans/: 2026-05-02-bq-nl2sql-mcp-plan-a.md  2026-05-02-bq-nl2sql-mcp-plan-b.md  plan-b-carryover.md
docs/superpowers/specs/: 2026-05-02-bq-nl2sql-mcp-design.md
evals/: badge.json
src/mcp_bigquery_evals/: __main__.py  cli.py  guardrails.py  schema_search.py  server.py
src/mcp_bigquery_evals/bq/: errors.py  fake.py  protocol.py  real.py  types.py
src/mcp_bigquery_evals/evals/: anthropic_model.py  compare.py  golden.yaml  prompt.py  report.py  runner.py
src/mcp_bigquery_evals/tools/: describe_table.py  estimate_cost.py  list_datasets.py  list_tables.py  run_query.py  sample_table.py  search_schema.py
tests/fixtures/: fake_warehouse.yaml  golden_fake.yaml
tests/integration/: test_evals_real_smoke.py  test_real_bq_smoke.py  test_server_smoke.py
tests/unit/: test_cli.py  test_dry_run_dedup.py  test_evals_anthropic_model.py  test_evals_compare.py  test_evals_prompt.py  test_evals_report.py  test_evals_runner.py  test_fake_client.py  test_guardrails.py  test_real_client.py  test_real_client_errors.py  test_schema_search.py  test_types.py
tests/unit/test_tools/: test_describe_table.py  test_estimate_cost.py  test_list_datasets.py  test_list_tables.py  test_run_query.py  test_sample_table.py  test_search_schema.py  test_server.py
