[project]
name = "mcp-bigquery-evals"
version = "0.1.0"
description = "An MCP server for BigQuery exploration with cost guardrails and a built-in NL-to-SQL eval harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Umarfarook Gurramkonda", email = "umarfarook0yt@gmail.com" }]
keywords = ["mcp", "bigquery", "llm", "nl2sql", "evals", "agent", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.27.0",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    "google-cloud-bigquery>=3.20",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/Umarfarook1/mcp-bigquery-evals"
Repository = "https://github.com/Umarfarook1/mcp-bigquery-evals"
Issues = "https://github.com/Umarfarook1/mcp-bigquery-evals/issues"
Documentation = "https://github.com/Umarfarook1/mcp-bigquery-evals#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
mcp-bigquery-evals = "mcp_bigquery_evals.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "bq: integration test that hits real BigQuery (requires BIGQUERY_PROJECT + ADC). Run with `pytest -m bq`.",
    "live: end-to-end test that hits real BQ AND real Anthropic API (requires API keys). Run with `pytest -m live`.",
]
addopts = "-m 'not bq and not live'"
